--- a/20161111Demo.ipynb
+++ b/20161111Demo.ipynb
@@ -520,13 +520,161 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 使用Pandas 讀取SQLIte 資料"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas\n",
+    "import sqlite3\n",
+    "with sqlite3.connect('news.sqlite') as db:\n",
+    "    df = pandas.read_sql_query('SELECT * FROM news_entry;', con=db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>category</th>\n",
+       "      <th>view_cnt</th>\n",
+       "      <th>time</th>\n",
+       "      <th>title</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>生活</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15:35</td>\n",
+       "      <td>【民報書摘】地圖上不存在的國家</td>\n",
+       "      <td>本內容由民報提供 (摘錄 全文請連結民報)民報書摘《地圖上不存在的國家》作者：尼克‧米德頓(...</td>\n",
+       "      <td>http://www.appledaily.com.tw/realtimenews/arti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>社會</td>\n",
+       "      <td>31324</td>\n",
+       "      <td>15:33</td>\n",
+       "      <td>【更新】殺1、2人不會判死？   割喉殺...</td>\n",
+       "      <td>（更新：判決理由） 2012年發生的台南湯姆熊男童遭割喉命案，震驚全台，兇嫌曾文欽落網後曾嗆...</td>\n",
+       "      <td>http://www.appledaily.com.tw/realtimenews/arti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>生活</td>\n",
+       "      <td>476</td>\n",
+       "      <td>15:31</td>\n",
+       "      <td>華為徠卡旗艦機　1萬7千元有找</td>\n",
+       "      <td>更新：新增影片 華為今在台發表最新旗艦機P9，主打拍照功能，手機搭載兩顆徠卡（Leica）光...</td>\n",
+       "      <td>http://www.appledaily.com.tw/realtimenews/arti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>娛樂</td>\n",
+       "      <td>154</td>\n",
+       "      <td>15:30</td>\n",
+       "      <td>哈孝遠相揪尬籃球　一句話竟然讓JJ硬了！</td>\n",
+       "      <td>藝人哈孝遠巧遇懷秋與JJ，並揪他們下次有空一起去打球，懷秋表示興奮！不過JJ有點擔心地說：「...</td>\n",
+       "      <td>http://www.appledaily.com.tw/realtimenews/arti...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>國際</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15:30</td>\n",
+       "      <td>【央廣RTI】遊古巴正夯  美國人暴增9...</td>\n",
+       "      <td>本內容由中央廣播電臺提供        古巴政府4日表示，2016年1至4月到古巴旅遊的美國...</td>\n",
+       "      <td>http://www.appledaily.com.tw/realtimenews/arti...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id category  view_cnt   time                    title  \\\n",
+       "0   1       生活         0  15:35          【民報書摘】地圖上不存在的國家   \n",
+       "1   2       社會     31324  15:33  【更新】殺1、2人不會判死？   割喉殺...   \n",
+       "2   3       生活       476  15:31          華為徠卡旗艦機　1萬7千元有找   \n",
+       "3   4       娛樂       154  15:30     哈孝遠相揪尬籃球　一句話竟然讓JJ硬了！   \n",
+       "4   5       國際         0  15:30  【央廣RTI】遊古巴正夯  美國人暴增9...   \n",
+       "\n",
+       "                                             summary  \\\n",
+       "0  本內容由民報提供 (摘錄 全文請連結民報)民報書摘《地圖上不存在的國家》作者：尼克‧米德頓(...   \n",
+       "1  （更新：判決理由） 2012年發生的台南湯姆熊男童遭割喉命案，震驚全台，兇嫌曾文欽落網後曾嗆...   \n",
+       "2  更新：新增影片 華為今在台發表最新旗艦機P9，主打拍照功能，手機搭載兩顆徠卡（Leica）光...   \n",
+       "3  藝人哈孝遠巧遇懷秋與JJ，並揪他們下次有空一起去打球，懷秋表示興奮！不過JJ有點擔心地說：「...   \n",
+       "4  本內容由中央廣播電臺提供        古巴政府4日表示，2016年1至4月到古巴旅遊的美國...   \n",
+       "\n",
+       "                                                link  \n",
+       "0  http://www.appledaily.com.tw/realtimenews/arti...  \n",
+       "1  http://www.appledaily.com.tw/realtimenews/arti...  \n",
+       "2  http://www.appledaily.com.tw/realtimenews/arti...  \n",
+       "3  http://www.appledaily.com.tw/realtimenews/arti...  \n",
+       "4  http://www.appledaily.com.tw/realtimenews/arti...  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 閱讀前五篇文章\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 將標題, 分詞結果, 標籤加到各自的List之中"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "titles = []\n",
+    "corpus = []\n",
+    "tags   = []\n",
+    "for index, news in df.iterrows():\n",
+    "    titles.append(news['title'])\n",
+    "    tags.append(news['category'])\n",
+    "    corpus.append(' '.join(jieba.cut(news['summary']))) "
+   ]
   }
  ],
  "metadata": {
