--- a/20161111Demo.ipynb
+++ b/20161111Demo.ipynb
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -735,7 +735,7 @@
        "(346, 17235)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,6 +831,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 使用Naive Bayes 建立分類模型"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 126,
    "metadata": {
@@ -855,6 +862,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 產生預測結果"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 127,
    "metadata": {
@@ -866,27 +880,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 驗證預測結果"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[26,  1],\n",
-       "       [ 2, 75]])"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['娛樂' '社會']\n",
+      "[[26  1]\n",
+      " [ 2 75]]\n"
+     ]
     }
    ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(test_tags,pred)"
+    "\n",
+    "print(clf.classes_)\n",
+    "print(confusion_matrix(test_tags,pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32 社會 娛樂 【公庫】政府不斷打擊文化資產  吳晟：失...\n",
+      "44 社會 娛樂 曾自爆和死亡擦身　李敖現身北檢裝神祕\n",
+      "60 娛樂 社會 直擊黃安新竹喝咖啡　網友：早知就點熱咖啡\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, item in enumerate(zip(test_tags, pred)):\n",
+    "    if item[0] != item[1]:\n",
+    "        print(idx,item[0],item[1], test_titles[idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'a')\n",
+      "(2, 'b')\n",
+      "(3, 'c')\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [ 1 ,  2 ,  3 ]\n",
+    "b = ['a', 'b', 'c']\n",
+    "for item in zip(a,b):\n",
+    "    print(item)"
    ]
   },
   {
@@ -913,13 +981,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 找出電腦分類用的關鍵字"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['娛樂', '社會'], \n",
+       "      dtype='<U2')"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.classes_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('警方', -4.5935540719612984),\n",
+       " ('報導', -5.0627103585625619),\n",
+       " ('男子', -5.1237421088336461),\n",
+       " ('翻攝', -5.3329802724311746),\n",
+       " ('更新', -5.41373437867958),\n",
+       " ('發現', -5.4326010830005877),\n",
+       " ('畫面', -5.5647593999242195),\n",
+       " ('表示', -5.6321930981551018),\n",
+       " ('時間', -5.643887770089222),\n",
+       " ('新聞', -5.7557917561405407),\n",
+       " ('中心', -5.8380185777293834),\n",
+       " ('蘋果', -5.9593610043567029),\n",
+       " ('機車', -5.992145451717068),\n",
+       " ('調查', -6.0434299756749992),\n",
+       " ('影片', -6.0791416798311229),\n",
+       " ('照片', -6.0974874521136897),\n",
+       " ('一名', -6.1161760917187751),\n",
+       " ('發生', -6.1546349747836544),\n",
+       " ('自殺', -6.1546349747836544),\n",
+       " ('女子', -6.2362963216824507),\n",
+       " ('現場', -6.2362963216824507),\n",
+       " ('網友', -6.2797719794136491),\n",
+       " ('知道', -6.3022397858954893),\n",
+       " ('認為', -6.3022397858954893),\n",
+       " ('10', -6.3252240199228451),\n",
+       " ('嫌犯', -6.3252240199228451),\n",
+       " ('新北市', -6.3252240199228451),\n",
+       " ('法官', -6.3487489815371987),\n",
+       " ('自己', -6.3487489815371987),\n",
+       " ('萬元', -6.3487489815371987)]"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 社會\n",
+    "import operator\n",
+    "word_coef = clf.coef_.flatten()\n",
+    "word      = vectorizer.get_feature_names()\n",
+    "word_rank = [item for item in zip(word, word_coef)]\n",
+    "swd       = sorted(word_rank, key=operator.itemgetter(1), reverse=True)\n",
+    "swd[0:30]"
+   ]
   }
  ],
  "metadata": {
