--- a/20161111Demo.ipynb
+++ b/20161111Demo.ipynb
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
@@ -671,15 +671,19 @@
     "corpus = []\n",
     "tags   = []\n",
     "for index, news in df.iterrows():\n",
-    "    if news['category'] == '社會' or news['category'] == '娛樂':\n",
+    "    if news['category'] == '社會' or news['category'] == '娛樂' or news['category'] == '財經':\n",
     "        titles.append(news['title'])\n",
     "        tags.append(news['category'])\n",
-    "        corpus.append(' '.join(jieba.cut(news['summary']))) "
+    "        article = []\n",
+    "        for word in jieba.cut(news['summary']):\n",
+    "            if re.match('[\\u4e00-\\u9fa5]+', word):\n",
+    "                article.append(word)\n",
+    "        corpus.append(' '.join(article)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 227,
    "metadata": {
     "collapsed": false
    },
@@ -687,10 +691,10 @@
     {
      "data": {
       "text/plain": [
-       "Counter({'娛樂': 126, '社會': 220})"
+       "Counter({'娛樂': 126, '社會': 220, '財經': 134})"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 228,
    "metadata": {
     "collapsed": true
    },
@@ -724,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 229,
    "metadata": {
     "collapsed": false
    },
@@ -732,10 +736,10 @@
     {
      "data": {
       "text/plain": [
-       "(346, 17235)"
+       "(480, 21239)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,12 +753,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 使用tfidf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfrom sklearn.feature_extraction.text import TfidfTransformer\\ntransformer = TfidfTransformer()\\ntfidf       = transformer.fit_transform(X)\\n#tfidf.toarray()\\nX = tfidf\\n'"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "transformer = TfidfTransformer()\n",
+    "tfidf       = transformer.fit_transform(X)\n",
+    "#tfidf.toarray()\n",
+    "X = tfidf\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 分為訓練與測試資料集"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 231,
    "metadata": {
     "collapsed": true
    },
@@ -766,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 232,
    "metadata": {
     "collapsed": false
    },
@@ -774,10 +813,10 @@
     {
      "data": {
       "text/plain": [
-       "242"
+       "336"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 233,
    "metadata": {
     "collapsed": false
    },
@@ -796,10 +835,10 @@
     {
      "data": {
       "text/plain": [
-       "104"
+       "144"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 234,
    "metadata": {
     "collapsed": false
    },
@@ -818,10 +857,10 @@
     {
      "data": {
       "text/plain": [
-       "'娛樂'"
+       "'財經'"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 235,
    "metadata": {
     "collapsed": false
    },
@@ -850,7 +889,7 @@
        "MultinomialNB(alpha=0.01, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 236,
    "metadata": {
     "collapsed": true
    },
@@ -888,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 237,
    "metadata": {
     "collapsed": false
    },
@@ -897,9 +936,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['娛樂' '社會']\n",
-      "[[26  1]\n",
-      " [ 2 75]]\n"
+      "['娛樂' '社會' '財經']\n",
+      "[[34  0  1]\n",
+      " [ 0 75  1]\n",
+      " [ 0  0 33]]\n"
      ]
     }
    ],
@@ -912,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 238,
    "metadata": {
     "collapsed": false
    },
@@ -921,9 +961,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32 社會 娛樂 【公庫】政府不斷打擊文化資產  吳晟：失...\n",
-      "44 社會 娛樂 曾自爆和死亡擦身　李敖現身北檢裝神祕\n",
-      "60 娛樂 社會 直擊黃安新竹喝咖啡　網友：早知就點熱咖啡\n"
+      "90 社會 財經 【公庫】旗山大溝頂老街 反政府拆遷\n",
+      "126 娛樂 財經 葉樹姍回鍋大愛台　接棒總監\n"
      ]
     }
    ],
@@ -935,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 239,
    "metadata": {
     "collapsed": false
    },
@@ -959,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 240,
    "metadata": {
     "collapsed": false
    },
@@ -967,10 +1006,10 @@
     {
      "data": {
       "text/plain": [
-       "0.97115384615384615"
+       "0.98611111111111116"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 241,
    "metadata": {
     "collapsed": false
    },
@@ -997,11 +1036,11 @@
     {
      "data": {
       "text/plain": [
-       "array(['娛樂', '社會'], \n",
+       "array(['娛樂', '社會', '財經'], \n",
        "      dtype='<U2')"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 242,
    "metadata": {
     "collapsed": false
    },
@@ -1020,52 +1059,83 @@
     {
      "data": {
       "text/plain": [
-       "[('警方', -4.5935540719612984),\n",
-       " ('報導', -5.0627103585625619),\n",
-       " ('男子', -5.1237421088336461),\n",
-       " ('翻攝', -5.3329802724311746),\n",
-       " ('更新', -5.41373437867958),\n",
-       " ('發現', -5.4326010830005877),\n",
-       " ('畫面', -5.5647593999242195),\n",
-       " ('表示', -5.6321930981551018),\n",
-       " ('時間', -5.643887770089222),\n",
-       " ('新聞', -5.7557917561405407),\n",
-       " ('中心', -5.8380185777293834),\n",
-       " ('蘋果', -5.9593610043567029),\n",
-       " ('機車', -5.992145451717068),\n",
-       " ('調查', -6.0434299756749992),\n",
-       " ('影片', -6.0791416798311229),\n",
-       " ('照片', -6.0974874521136897),\n",
-       " ('一名', -6.1161760917187751),\n",
-       " ('發生', -6.1546349747836544),\n",
-       " ('自殺', -6.1546349747836544),\n",
-       " ('女子', -6.2362963216824507),\n",
-       " ('現場', -6.2362963216824507),\n",
-       " ('網友', -6.2797719794136491),\n",
-       " ('知道', -6.3022397858954893),\n",
-       " ('認為', -6.3022397858954893),\n",
-       " ('10', -6.3252240199228451),\n",
-       " ('嫌犯', -6.3252240199228451),\n",
-       " ('新北市', -6.3252240199228451),\n",
-       " ('法官', -6.3487489815371987),\n",
-       " ('自己', -6.3487489815371987),\n",
-       " ('萬元', -6.3487489815371987)]"
+       "3"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 社會\n",
+    "len(clf.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('報導', -4.8685093294724018),\n",
+       " ('台灣', -5.2049479560374827),\n",
+       " ('表示', -5.2655652258047176),\n",
+       " ('市場', -5.2781424259321081),\n",
+       " ('美元', -5.2908798290665287),\n",
+       " ('經濟', -5.3848961404727484),\n",
+       " ('台北', -5.4134654310342398),\n",
+       " ('公司', -5.4428749906816707),\n",
+       " ('中國', -5.5366790675029893),\n",
+       " ('成長', -5.5366790675029893),\n",
+       " ('指出', -5.5532056376653287),\n",
+       " ('董事', -5.6044901616232599),\n",
+       " ('越南', -5.6044901616232599),\n",
+       " ('發展', -5.6772362776670358),\n",
+       " ('全球', -5.6962808448817697),\n",
+       " ('產業', -5.7354938672359381),\n",
+       " ('蘋果', -5.7763075301239013),\n",
+       " ('投資', -5.8188580884993737),\n",
+       " ('億元', -5.8408321653619097),\n",
+       " ('今年', -5.86329997184375),\n",
+       " ('去年', -5.86329997184375),\n",
+       " ('目前', -5.86329997184375),\n",
+       " ('科技', -5.9098091674854594),\n",
+       " ('電腦', -5.9339009132627822),\n",
+       " ('企業', -5.9585874297976069),\n",
+       " ('智慧', -5.9585874297976069),\n",
+       " ('提供', -6.0365287062686859),\n",
+       " ('價格', -6.1210622536476471),\n",
+       " ('可能', -6.1210622536476471),\n",
+       " ('外資', -6.1210622536476471)]"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "import operator\n",
-    "word_coef = clf.coef_.flatten()\n",
+    "# 0 => 娛樂 1=> 社會 2=> 財經\n",
+    "word_coef = clf.coef_[2].flatten()\n",
     "word      = vectorizer.get_feature_names()\n",
     "word_rank = [item for item in zip(word, word_coef)]\n",
     "swd       = sorted(word_rank, key=operator.itemgetter(1), reverse=True)\n",
     "swd[0:30]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
