--- a/20161111Demo.ipynb
+++ b/20161111Demo.ipynb
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 245,
    "metadata": {
     "collapsed": false
    },
@@ -1081,39 +1081,39 @@
     {
      "data": {
       "text/plain": [
-       "[('報導', -4.8685093294724018),\n",
-       " ('台灣', -5.2049479560374827),\n",
-       " ('表示', -5.2655652258047176),\n",
-       " ('市場', -5.2781424259321081),\n",
-       " ('美元', -5.2908798290665287),\n",
-       " ('經濟', -5.3848961404727484),\n",
-       " ('台北', -5.4134654310342398),\n",
-       " ('公司', -5.4428749906816707),\n",
-       " ('中國', -5.5366790675029893),\n",
-       " ('成長', -5.5366790675029893),\n",
-       " ('指出', -5.5532056376653287),\n",
-       " ('董事', -5.6044901616232599),\n",
-       " ('越南', -5.6044901616232599),\n",
-       " ('發展', -5.6772362776670358),\n",
-       " ('全球', -5.6962808448817697),\n",
-       " ('產業', -5.7354938672359381),\n",
-       " ('蘋果', -5.7763075301239013),\n",
-       " ('投資', -5.8188580884993737),\n",
-       " ('億元', -5.8408321653619097),\n",
-       " ('今年', -5.86329997184375),\n",
-       " ('去年', -5.86329997184375),\n",
-       " ('目前', -5.86329997184375),\n",
-       " ('科技', -5.9098091674854594),\n",
-       " ('電腦', -5.9339009132627822),\n",
-       " ('企業', -5.9585874297976069),\n",
-       " ('智慧', -5.9585874297976069),\n",
-       " ('提供', -6.0365287062686859),\n",
-       " ('價格', -6.1210622536476471),\n",
-       " ('可能', -6.1210622536476471),\n",
-       " ('外資', -6.1210622536476471)]"
+       "[('報導', -5.0449244045611188),\n",
+       " ('週刊', -5.2962035644495549),\n",
+       " ('新聞', -5.3788815989255463),\n",
+       " ('自己', -5.5474726494820628),\n",
+       " ('粉絲', -5.6106382442361422),\n",
+       " ('綜合', -5.6106382442361422),\n",
+       " ('這則', -5.6106382442361422),\n",
+       " ('節目', -5.6780643616078743),\n",
+       " ('女兒', -5.7756789848849541),\n",
+       " ('工作', -5.7756789848849541),\n",
+       " ('翻攝', -5.8283088620054544),\n",
+       " ('表示', -5.8557003307427351),\n",
+       " ('台灣', -5.8838632734369449),\n",
+       " ('提供', -5.8838632734369449),\n",
+       " ('台北', -5.9426864625384175),\n",
+       " ('中國', -5.9734486544217473),\n",
+       " ('偶像', -5.9734486544217473),\n",
+       " ('我們', -5.9734486544217473),\n",
+       " ('不過', -6.0051872752911617),\n",
+       " ('鹿晗', -6.0051872752911617),\n",
+       " ('公司', -6.0379663489512438),\n",
+       " ('娛樂', -6.0718564102702057),\n",
+       " ('活動', -6.0718564102702057),\n",
+       " ('網友', -6.0718564102702057),\n",
+       " ('就是', -6.106935419131502),\n",
+       " ('鼓鼓', -6.1432898405989942),\n",
+       " ('香港', -6.2202212635139915),\n",
+       " ('可以', -6.261026598170357),\n",
+       " ('因為', -6.261026598170357),\n",
+       " ('時間', -6.261026598170357)]"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,11 +1121,152 @@
    "source": [
     "import operator\n",
     "# 0 => 娛樂 1=> 社會 2=> 財經\n",
-    "word_coef = clf.coef_[2].flatten()\n",
+    "word_coef = clf.coef_[0].flatten()\n",
     "word      = vectorizer.get_feature_names()\n",
     "word_rank = [item for item in zip(word, word_coef)]\n",
     "swd       = sorted(word_rank, key=operator.itemgetter(1), reverse=True)\n",
     "swd[0:30]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 使用Gensim 建立 word2vec 模型"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 下載Gensim\n",
+    "- https://pypi.python.org/pypi/gensim#downloads\n",
+    "- https://pypi.python.org/packages/74/68/82a3ebb34ac9a7ec4bb004b5a92462e9ce6ce56e8dd7544f913b49bd372a/gensim-0.13.3-cp35-cp35m-win_amd64.whl#md5=9ebf4708ca1cc0306242dd4c0d63d4f1\n",
+    "\n",
+    "- conda install win-64-gensim-0.12.4-np111py35_0.tar.bz2\n",
+    "\n",
+    "## 下載 smart_open\n",
+    "- https://pypi.python.org/pypi/smart_open/1.3.5\n",
+    "- 解壓縮\n",
+    "- python setup.py install "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "import sqlite3\n",
+    "with sqlite3.connect('news.sqlite') as db:\n",
+    "    df = pandas.read_sql_query('SELECT * FROM news_entry;', con=db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import jieba, re\n",
+    "\n",
+    "corpus = []\n",
+    "tags = []\n",
+    "title = []\n",
+    "for index, news in df.iterrows():\n",
+    "    #if (rec[2] == '娛樂'.decode('utf-8')):\n",
+    "    ele  = jieba.cut(news['summary'])\n",
+    "    corpus.append([w for w in ' '.join(ele).split()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from gensim.models import word2vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_features = 10\n",
+    "min_word_count = 10\n",
+    "num_workers = 4\n",
+    "context = 10\n",
+    "epoch = 20\n",
+    "sample = 1e-5\n",
+    "model = word2vec.Word2Vec(corpus, workers = num_workers,\n",
+    "                          sample = sample,\n",
+    "                          size = num_features,\n",
+    "                          min_count=min_word_count,\n",
+    "                          window = context,\n",
+    "                          iter = epoch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BBC', '拒絕', '姊', '試驗', '熊本', '多名', '85', '絕食', '差距', '門檻']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[w for w in model.vocab][0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "下載 0.999111533164978\n",
+      "Plus 0.998620331287384\n",
+      "2016 0.9981125593185425\n",
+      "影片 0.9979183077812195\n",
+      "I 0.9978212118148804\n",
+      "— 0.99778813123703\n",
+      "曾雪蒨 0.9977516531944275\n",
+      "警長 0.9976658821105957\n",
+      "Johnson 0.9975661039352417\n",
+      "NASA 0.9974972605705261\n"
+     ]
+    }
+   ],
+   "source": [
+    "for w in model.most_similar('iPhone'):\n",
+    "    print(w[0], w[1])"
    ]
   },
   {
