--- a/20161111Demo.ipynb
+++ b/20161111Demo.ipynb
@@ -1140,15 +1140,17 @@
    "metadata": {},
    "source": [
     "## 下載Gensim\n",
-    "- https://pypi.python.org/pypi/gensim#downloads\n",
-    "- https://pypi.python.org/packages/74/68/82a3ebb34ac9a7ec4bb004b5a92462e9ce6ce56e8dd7544f913b49bd372a/gensim-0.13.3-cp35-cp35m-win_amd64.whl#md5=9ebf4708ca1cc0306242dd4c0d63d4f1\n",
+    "- https://anaconda.org/anaconda/gensim/0.12.4/download/win-64/gensim-0.12.4-np110py35_0.tar.bz2\n",
     "\n",
-    "- conda install win-64-gensim-0.12.4-np111py35_0.tar.bz2\n",
+    "- conda install win-64-gensim-0.12.4-np110py35_0.tar.bz2\n",
     "\n",
     "## 下載 smart_open\n",
     "- https://pypi.python.org/pypi/smart_open/1.3.5\n",
     "- 解壓縮\n",
-    "- python setup.py install "
+    "- 找到 setup.py \n",
+    "- python setup.py install \n",
+    "\n",
+    "## Jupyter Notebook 需要重開"
    ]
   },
   {
@@ -1242,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -1251,21 +1253,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "下載 0.999111533164978\n",
-      "Plus 0.998620331287384\n",
-      "2016 0.9981125593185425\n",
-      "影片 0.9979183077812195\n",
-      "I 0.9978212118148804\n",
-      "— 0.99778813123703\n",
-      "曾雪蒨 0.9977516531944275\n",
-      "警長 0.9976658821105957\n",
-      "Johnson 0.9975661039352417\n",
-      "NASA 0.9974972605705261\n"
+      "十足 0.9992067813873291\n",
+      "der 0.9991540908813477\n",
+      "奪下 0.9991258978843689\n",
+      "當下 0.9991075992584229\n",
+      "彩色 0.9990630149841309\n",
+      "多少 0.9989532232284546\n",
+      "似 0.9988793730735779\n",
+      "相機 0.9988418817520142\n",
+      "天后 0.9987508654594421\n",
+      "站上 0.9987317323684692\n"
      ]
     }
    ],
    "source": [
-    "for w in model.most_similar('iPhone'):\n",
+    "for w in model.most_similar('熊本'):\n",
     "    print(w[0], w[1])"
    ]
   },
